# sinkhorn-vision-kd

./: .gitignore  README.md  evaluate.py  main.py  playground.ipynb  pyproject.toml  run_colab.ipynb  train.py
checkpoints/cifar10/: adaptive_sinkhorn_kd_best.pth  adaptive_sinkhorn_kd_epoch10.pth  adaptive_sinkhorn_kd_epoch100.pth  adaptive_sinkhorn_kd_epoch110.pth  adaptive_sinkhorn_kd_epoch120.pth  adaptive_sinkhorn_kd_epoch130.pth  adaptive_sinkhorn_kd_epoch140.pth  adaptive_sinkhorn_kd_epoch150.pth  adaptive_sinkhorn_kd_epoch160.pth  adaptive_sinkhorn_kd_epoch170.pth  adaptive_sinkhorn_kd_epoch180.pth  adaptive_sinkhorn_kd_epoch190.pth  adaptive_sinkhorn_kd_epoch20.pth  adaptive_sinkhorn_kd_epoch200.pth  adaptive_sinkhorn_kd_epoch30.pth  adaptive_sinkhorn_kd_epoch40.pth  adaptive_sinkhorn_kd_epoch50.pth  adaptive_sinkhorn_kd_epoch60.pth  adaptive_sinkhorn_kd_epoch70.pth  adaptive_sinkhorn_kd_epoch80.pth  adaptive_sinkhorn_kd_epoch90.pth  adaptive_sinkhorn_kd_results.pth  kl_kd_best.pth  kl_kd_epoch10.pth  kl_kd_epoch100.pth  kl_kd_epoch110.pth  kl_kd_epoch120.pth  kl_kd_epoch130.pth  kl_kd_epoch140.pth  kl_kd_epoch150.pth  kl_kd_epoch160.pth  kl_kd_epoch170.pth  kl_kd_epoch180.pth  kl_kd_epoch190.pth  kl_kd_epoch20.pth  kl_kd_epoch200.pth  kl_kd_epoch30.pth  kl_kd_epoch40.pth  (+29 more)
configs/: cifar100_config.yaml  cifar10_config.yaml
distillation/: __init__.py  adaptive_sinkhorn.py  kl_distill.py  sinkhorn_distill.py
experiments/: run_all.sh
models/: __init__.py  mobilenet.py  resnet.py
utils/: __init__.py  data_loader.py  metrics.py  visualization.py
(+67 files in other folders)
