[project]
name = "sinkhorn-vision-kd"
version = "0.1.0"
description = "Sinkhorn Optimal Transport Knowledge Distillation with Learnable Cost Matrix for Vision Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pot>=0.9.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "distillation", "utils"]

[tool.uv]
dev-dependencies = []
